chore(ci): fix project file name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  publish-client:
+  publish:
     name: build, pack & publish
     runs-on: ubuntu-latest
     steps:
@@ -16,20 +16,15 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           PACKAGE_NAME: DiamondCrew.FiveM.Utils.Client
-          PROJECT_FILE_PATH: DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.cs
+          PROJECT_FILE_PATH: DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.csproj
           NUGET_KEY: ${{ secrets.NUGET_KEY }}
-  
-  publish-server:
-    name: build, pack & publish
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
+          
       - name: publish server
         id: publish_nuget
         uses: rohith/publish-nuget@v2
         with:
           PACKAGE_NAME: DiamondCrew.FiveM.Utils.Server
-          PROJECT_FILE_PATH: DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.cs
+          PROJECT_FILE_PATH: DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
           NUGET_KEY: ${{ secrets.NUGET_KEY }}
+
     
