--- a/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
+++ b/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
@@ -33,10 +33,6 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="CitizenFX.Core.Server, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\packages\CitizenFX.Core.Server.1.0.5392\lib\net45\CitizenFX.Core.Server.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
@@ -47,7 +43,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-      <None Include="packages.config" />
+      <PackageReference Include="CitizenFX.Core.Server" Version="1.0.5392" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
