--- a/DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.csproj
+++ b/DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CitizenFX.Core.Client, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CitizenFX.Core.Client.1.0.5392\lib\net45\CitizenFX.Core.Client.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,7 +47,7 @@
     <Compile Include="Wrapper\QTarget.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="CitizenFX.Core.Client" Version="1.0.5392" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
