--- a/DiamondCrew.FiveM.Utils.Shared/DiamondCrew.FiveM.Utils.Shared.csproj
+++ b/DiamondCrew.FiveM.Utils.Shared/DiamondCrew.FiveM.Utils.Shared.csproj
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
+        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{6D03F18D-17CE-43F2-B0CE-69811BE8CDA9}</ProjectGuid>
+        <ProjectGuid>{7821DA91-68F1-4E4D-B9C8-47C471AA3298}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>DiamondCrew.FiveM.Utils.Server</RootNamespace>
-        <AssemblyName>DiamondCrew.FiveM.Utils.Server</AssemblyName>
+        <RootNamespace>DiamondCrew.FiveM.Utils.Shared</RootNamespace>
+        <AssemblyName>DiamondCrew.FiveM.Utils.Shared</AssemblyName>
         <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -38,17 +38,16 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ServerScript.cs" />
+        <Compile Include="DiamondScript.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ScriptType.cs" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="CitizenFX.Core.Server" Version="1.0.5392" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\DiamondCrew.FiveM.Utils.Shared\DiamondCrew.FiveM.Utils.Shared.csproj">
-        <Project>{7821da91-68f1-4e4d-b9c8-47c471aa3298}</Project>
-        <Name>DiamondCrew.FiveM.Utils.Shared</Name>
-      </ProjectReference>
+        <PackageReference Include="CitizenFX.Core.Client" Version="1.0.5392" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" ExcludeAssets="Compile" GeneratePathProperty="true" />
+        <Reference Include="Newtonsoft.Json">
+            <HintPath>$(PkgNewtonsoft_Json)\lib\portable-net40+sl5+win8+wp8+wpa81\Newtonsoft.Json.dll</HintPath>
+        </Reference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
