--- a/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
+++ b/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
@@ -40,15 +40,10 @@
     <ItemGroup>
         <Compile Include="ServerScript.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="..\DiamondCrew.FiveM.Utils.Shared\*.cs" />
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="CitizenFX.Core.Server" Version="1.0.5392" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\DiamondCrew.FiveM.Utils.Shared\DiamondCrew.FiveM.Utils.Shared.csproj">
-        <Project>{7821da91-68f1-4e4d-b9c8-47c471aa3298}</Project>
-        <Name>DiamondCrew.FiveM.Utils.Shared</Name>
-      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
