--- a/DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.csproj
+++ b/DiamondCrew.FiveM.Utils.Client/DiamondCrew.FiveM.Utils.Client.csproj
@@ -54,6 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CitizenFX.Core.Client" Version="1.0.5392" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" ExcludeAssets="Compile" GeneratePathProperty="true" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>$(PkgNewtonsoft_Json)\lib\portable-net40+sl5+win8+wp8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
