--- a/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
+++ b/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
@@ -44,6 +44,10 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="CitizenFX.Core.Server" Version="1.0.5392" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" ExcludeAssets="Compile" GeneratePathProperty="true" />
+        <Reference Include="Newtonsoft.Json">
+            <HintPath>$(PkgNewtonsoft_Json)\lib\portable-net40+sl5+win8+wp8+wpa81\Newtonsoft.Json.dll</HintPath>
+        </Reference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
