--- a/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
+++ b/DiamondCrew.FiveM.Utils.Server/DiamondCrew.FiveM.Utils.Server.csproj
@@ -38,7 +38,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ServerScript.cs" />
+        <Compile Include="DCServerScript.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="..\DiamondCrew.FiveM.Utils.Shared\*.cs" />
     </ItemGroup>
