--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
         run: msbuild.exe DCRPUtils.sln /p:configuration="Release"
         
       - name: pack & publish shared
-        if: "contains(github.event.commits[0].message, 'shared'"
+        if: "contains(github.event.commits[0].message, 'ci-sh')"
         run: |
           cd DiamondCrew.FiveM.Utils.Shared
           nuget pack -OutputFileNamesWithoutVersion
@@ -39,7 +39,7 @@ jobs:
         run: cd $GITHUB_WORKSPACE
 
       - name: pack & publish client
-        if: "contains(github.event.commits[0].message, 'client'"
+        if: "contains(github.event.commits[0].message, 'ci-cl')"
         run: |
           cd DiamondCrew.FiveM.Utils.Client
           nuget pack -OutputFileNamesWithoutVersion
@@ -49,7 +49,7 @@ jobs:
         run: cd $GITHUB_WORKSPACE
     
       - name: pack & publish server
-        if: "contains(github.event.commits[0].message, 'server'"
+        if: "contains(github.event.commits[0].message, 'ci-sr')"
         run: |
           cd DiamondCrew.FiveM.Utils.Server
           nuget pack -OutputFileNamesWithoutVersion
